--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -491,7 +491,7 @@
 
 
                 let diceX1, diceX2;
-                if (item.player === 'red') {
+                if (item.player === 'Red') {
                 diceX1 = 640; // кубики справа для красных
                 diceX2 = 730;
                 } else {
