--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -491,7 +491,7 @@
 
 
                 let diceX1, diceX2;
-                if (item.player === 'Red') {
+                if (item.player === 'Black') {
                 diceX1 = 530; // кубики справа для красных
                 diceX2 = 620;
                 } else {
