--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -504,7 +504,7 @@
 
 
                 let diceX1, diceX2;
-                if (item.player === 'Black') {
+                if (item.player === 'Red') {
                 diceX1 = 530; // кубики справа для чёрных
                 diceX2 = 620;
                 } else {
